# sierra-chart-tear-sheet

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows-exe.yml
docs/: report.html
samples/: report.html
tearsheet/: __init__.py  __main__.py
tearsheet/app/: __init__.py  cli.py  main.py
tearsheet/dataio/: __init__.py  benchmark.py  loader.py
tearsheet/metrics/: __init__.py  execution.py  montecarlo.py  monthly_summary.py  performance.py  rolling.py  sc_statistics.py  segmentation.py
tearsheet/normalize/: __init__.py  cash_ledger.py  events.py  fills.py  orders.py
tearsheet/recon/: __init__.py  equity.py  trades.py
tearsheet/report/: __init__.py  render.py  template.html
tearsheet/tests/: __init__.py  conftest.py  test_app_benchmark.py  test_benchmark.py  test_execution.py  test_loader.py  test_monthly_summary.py  test_r_multiples.py  test_report.py  test_rolling.py  test_segmentation.py  test_segmentation_extended.py  test_trades.py  test_validation.py
