[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sierra-chart-tear-sheet"
version = "1.0.0"
description = "Generate a trade tear sheet from a Sierra Chart Trade Activity Log file"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.3.0",
    "plotly>=5.0.0",
    "Jinja2>=3.0.0",
]

[project.optional-dependencies]
benchmark = ["yfinance>=0.2.0"]
dev = [
    "pytest>=7.0",
    "yfinance>=0.2.0",
]

[project.scripts]
tearsheet = "tearsheet.app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tearsheet*"]
